Bug 338540 - Settings not loaded in secondary windows
Summary: Settings not loaded in secondary windows
Status: RESOLVED FIXED
Alias: None
Product: kronometer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-25 08:43 UTC by Elvis Angelaccio
Modified: 2014-08-27 14:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2014-08-25 08:43:59 UTC
If more than one Kronometer's window is opened and a setting is changed, only the primary window loads the new setting, while the secondary windows don't.

The expected behavior is that all the existing windows should load the new settings, at the same time.
Comment 1 Elvis Angelaccio 2014-08-27 14:18:36 UTC
Git commit 74405bcd995729a8c41b87e4e3a8b3c5cb7bd61e by Elvis Angelaccio.
Committed on 27/08/2014 at 14:16.
Pushed by elvisangelaccio into branch 'master'.

Fixed bug 338540 by loading the settings for each existing window.

M  +9    -1    src/mainwindow.cpp

http://commits.kde.org/kronometer/74405bcd995729a8c41b87e4e3a8b3c5cb7bd61e