BUG: 338540

Fixed bug 338540 by loading the settings for each existing window.